# pending changes
    - README: brief API description added
    - support for eps,delta computations with varying parameters (docs, tests, code quality)

# 0.12.0
    - first public release as `fourier_accountant` package
    - code cleanup and rename from paper version, initially released as `pld_accountant`
